# jupyterlite-numbl-kernel

./: .gitignore  .prettierignore  README.md  install.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  deploy.yml
demo/: coi-serviceworker.js  inject-coi.mjs  jupyter-lite.json  requirements.txt
demo/content/: 01-intro.ipynb  02-data-types-and-operators.ipynb  02-plotting.ipynb  03-matrices-and-indexing.ipynb  03-packages.ipynb  04-control-flow-and-functions.ipynb  05-linear-algebra.ipynb  06-data-structures-and-strings.ipynb  09-classes-and-oop.ipynb  10-namespaces-and-packages.ipynb  11-mip-packages.ipynb  Account.m  Circle.m  MathX.m  Shape.m  Square.m  Temperature.m  Vec2.m  minmax.m  statsutils.m
demo/content/+geom/: Point.m  circle_area.m
demo/content/+geom/+util/: deg2rad.m
demo/content/@Poly/: Poly.m  evalAt.m
demo/content/advanced/: 01-data-types-and-operators.ipynb  02-matrices-and-indexing.ipynb  03-control-flow-and-functions.ipynb  04-linear-algebra.ipynb  05-data-structures-and-strings.ipynb  06-numerical-methods.ipynb  07-plotting-gallery.ipynb  fib.m
demo/content/toolbox/: robust_center.m
demo/content/toolbox/private/: trimmed_mean.m
jupyterlite_numbl_kernel/: __init__.py
src/: index.ts  interruptBridge.ts  kernel.ts  mime.tsx
style/: index.css
